# -*- eval: (cargo-minor-mode 1) -*-

[workspace]
members = [".", "./codegen"]

[package]
name = "bitmap-font"
version = "0.2.2"
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2021"
rust-version = "1.57"
description = "This crate provides bitmap fonts for the embedded-graphics crate without requiring generics"
keywords = ["embedded", "graphics", "bitmap", "font", "no_std"]
categories = ["embedded", "graphics", "no-std"]
license = "Apache-2.0"
readme = "crates-io.md"
repository = "https://github.com/msrd0/bitmap-font"
include = ["src/**/*", "LICENSE", "crates-io.md"]

[dependencies]
embedded-graphics = "0.7"
