# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "bitmap-font-codegen"
version = "0.0.0"
publish = false
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
askama = { version = "0.11", default-features = false }
base64 = "0.13"
bdf = { git = "https://github.com/meh/rust-bdf", rev = "2eceb6634bf4932cc877a69d574c86994c0cf883" }
bit-vec = "0.6"
linked-hash-map = "0.5.4"
num-format = "0.4"
