# -*- eval: (cargo-minor-mode 1) -*-

[package]
workspace = ".."
name = "bitmap-font-codegen"
version = "0.0.0"
publish = false
authors = ["Dominic Meiser <git@msrd0.de>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
askama = { version = "0.11", default-features = false }
base64 = "0.13"
bdf-reader = "0.1.1"
bit-vec = "0.6"
indexmap = "1.9"
log = "0.4"
num-format = "0.4"
simple_logger = "4.0"
